--- a/src/app/name-form/name-form.component.html
+++ b/src/app/name-form/name-form.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <h1>Hero Form</h1>
-  <form #nameForm="ngForm" (ngSubmit)="onSubmit()">
+  <h1>Name Form</h1>
+  <form (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="nameField">Name</label>
       <input type="text" class="form-control" id="nameField"
